# smpeg

./: CLAUDE.md  README.meson  apply_patches.sh  build.lhelper  gtv.1  gtv.c  gtv.h  meson.build  meson_options.txt  plaympeg.1  plaympeg.c
audio/: huffmantable.cpp  meson.build
debian/: changelog  control
video/: meson.build  mmxflags_asm.S  mmxidct_asm.S
